--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffeaa7"/>
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <link rel="stylesheet" href="main.css">
+    <title>chris lindo </title>
+</head>
+<body>
+
+
 <button>like</button>
 <p>oie</p>
