--- a/index.html
+++ b/index.html
@@ -13,3 +13,19 @@
 
 <button>like</button>
 <p>oie</p>
+    
+    </p>
+        <!-- form input control -->
+        <div class="form-group">
+        <label class="form-label" for="input-example-1">Número do cartão</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <label class="form-label" for="input-example-1">CPF</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <label class="form-label" for="input-example-1">3 dígitos de trás</label>
+        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
+        <button class="btn btn-default">Enviar</button>
+        </div>
+    </div>
+
+</body>
+</html>
