--- a/index.html
+++ b/index.html
@@ -6,24 +6,14 @@
     <meta name="theme-color" content="#ffeaa7"/>
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
     <link rel="stylesheet" href="main.css">
-    <title>chris lindo </title>
+    <title>Clonar </title>
 </head>
 <body>
-
-
-<button>like</button>
-<p>oie</p>
     
-    </p>
-        <!-- form input control -->
-        <div class="form-group">
-        <label class="form-label" for="input-example-1">Número do cartão</label>
-        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-        <label class="form-label" for="input-example-1">CPF</label>
-        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-        <label class="form-label" for="input-example-1">3 dígitos de trás</label>
-        <input class="form-input" type="number" id="input-example-1" placeholder="Name">
-        <button class="btn btn-default">Enviar</button>
+    <div class="container">
+        <h1>sei nao emesse chris e pauzudo</h1>
+        <p>
+        
         </div>
     </div>
 
